# advent-of-code-python

./: .envrc_example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml  python-ci.yml
2023/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py
2023/tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py  test_10.py
2024/solutions/: day05.py  day06.py  day11.py  day12.py  day15.py  day16.py  day18.py  day22.py  day23.py  day24.py
2024/tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_08.py  test_09.py  test_10.py  test_11.py  test_17.py  test_18.py  test_20.py  test_21.py  test_22.py  test_23.py  test_25.py
_2022/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py
_2022/tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py  test_10.py  test_11.py  test_12.py  test_13.py  test_14.py  test_15.py  test_16.py
_2023/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py
_2023/tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py  test_10.py  test_11.py
_2024/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
_2024/tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py  test_10.py  test_11.py  test_12.py  test_13.py  test_14.py  test_15.py  test_16.py  test_17.py  test_18.py  test_19.py  test_20.py  test_21.py  test_22.py  test_23.py  test_24.py  test_25.py
_2025/solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py
_2025/tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py  test_10.py  test_11.py  test_12.py
aoc/models/: authenticator.py  base.py  file.py  reader.py  submission.py  tester.py
aoc/utils/: initalise.py
solutions/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  day09.py  day10.py  day11.py  day12.py  day13.py  day14.py  day15.py  day16.py  day17.py  day18.py  day19.py  day20.py  day21.py  day22.py  day23.py  day24.py  day25.py
templates/solutions/: sample.py
templates/tests/: sample.txt
tests/: test_01.py  test_02.py  test_03.py  test_04.py  test_05.py  test_06.py  test_07.py  test_08.py  test_09.py  test_10.py  test_11.py  test_12.py  test_13.py  test_14.py  test_15.py  test_16.py  test_17.py  test_18.py  test_19.py  test_20.py  test_21.py  test_22.py  test_23.py  test_24.py  test_25.py
