[tool.poetry]
name = "aoc2024"
version = "0.1.0"
description = "Advent of Code is an Advent calendar of small programming puzzles for a variety of skill sets and skill levels that can be solved in any programming language you like. People use them as interview prep, company training, university coursework, practice problems, a speed contest, or to challenge each other."
authors = ["mallory.brickerd <mallory.brickerd@eraneos.com>"]
readme = "README.md"
packages = [{include = "aoc"}]

[tool.poetry.dependencies]
python = "^3.11"
loguru = "^0.7.3"
requests = "^2.32.3"
bs4 = "^0.0.2"
networkx = "^3.4.2"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
autopep8 = "^2.3.1"
mypy = "^1.13.0"
pytest = "^8.3.4"
flake8-pyproject = "^1.2.3"

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]
exclude = [".venv", ".git", "__pycache__"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-v"
testpaths = ["tests"]
